added javascript for hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,9 +11,39 @@
 
     </head>
     <body>
+        <nav class="mobile-nav">
+            <h1 style="font-size: 35px;">frankenmiller's webpages</h1>            
+            <a href="https://frankenmiller.github.io/newapp-bootcamp-certificate/">Bootcamp Certificate</a>
+            <a href="https://frankenmiller.github.io/africa-kwacha-snowflake/">Google Digital Skills for Africa</a>
+            <a href="https://frankenmiller.github.io/jupyter-final-data-project/">Datacamp Project in Jupyter</a>
+            <a href="https://frankenmiller.github.io/javascript-neuralnet-car/">Machine Learning Project</a>
+            <ul id="social-icons">
+                <li><a style="background: none; font-size: 30px;" href="https://wa.me/260954692511">
+                    <ion-icon name="logo-whatsapp"></ion-icon>                
+                </a></li>
+                <li><a style="background: none; font-size: 30px;"  onclick="location.href='mailto:dr.frankenmiller@gmail.com';">
+                    <ion-icon name="mail-outline"></ion-icon>
+                </a></li>
+                <li><a style="background: none; font-size: 30px;" href="https://github.com/frankenmiller">
+                    <ion-icon name="logo-github"></ion-icon>
+                </a></li>
+                <li><a style="background: none; font-size: 30px;" href="https://linkedin.com/in/frankenmiller">
+                    <ion-icon name="logo-linkedin"></ion-icon>                
+                </a></li>
+                <li><a style="background: none; font-size: 30px;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                    <ion-icon name="logo-youtube"></ion-icon>                
+                </a></li>
+                <li><a style="background: none; font-size: 30px;" href="https://public.tableau.com/app/profile/frankenmiller">
+                    <ion-icon name="logo-tableau"></ion-icon>
+                </a></li>
+            </ul>
+        </nav>        
         <p>frankenmiller's smartrocket project in p5js</p>
         <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
         <script id="my_canvas" src="js/main.js"></script>
+        <script src="burger.js"></script>   
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>                     
     </body>
     <br>
 </html>
