--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </head>
     <body>
-        <p>frankenmiller's smartrocket project in p5js</p>
+        <p id="opener">frankenmiller's smartrocket project in p5js</p>
         <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
         <script id="my_canvas" src="js/main.js"></script>
     </body>
