Found bug and got corrected, project working okay and ready to proceed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <p id="opener">frankenmiller's smartrocket project in p5js</p>
-        <p id="counter">Life P:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lifespan: 200</p>
+        <p id="counter">Life-P:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lifespan: 200</p>
         <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
         <script id="my_canvas" src="js/main.js"></script>
     </body>
