Fixed some of the centering issues, project ready to add burger button

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#212121" />
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
 
     </head>
     <body>
+        <button class="hamburger">Click me!</button>
         <p id="opener">frankenmiller's smartrocket project in p5js</p>
         <p id="counter">Life-P:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lifespan: 200</p>
         <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
-        <script id="my_canvas" src="js/main.js"></script>
+        <script language="javascript" type="text/javascript" src="js/main.js"></script>
     </body>
     <br>
 </html>
