--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
         </nav>
         <p id="opener"><a href="https://linkedin.com/in/frankenmiller/">linkedin.com/in/frankenmiller</a></p>
-        <p id="counter">Life-P:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lifespan: 200</p>
+        <!-- <p id="counter">Life-P:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lifespan: 200</p> -->
         <script language="javascript" type="text/javascript" src="js/vendor/p5.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/main.js"></script>
         <script language="javascript" type="text/javascript" src="js/burger.js"></script>
