Burger button left added and displaying properly

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                     <a href=""></a>
                     <a href=""></a>
                 </nav>
-                <button class="hamburger">
+                <button class="hamburger-right">
+                    <div class="bar"></div>
+                </button>
+                <button class="hamburger-left">
                     <div class="bar"></div>
                 </button>
             </div>
