Left hamburger button triggering scroll, going correct direction, still needs styling and content

--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
                 </button>
             </div>
         </header>
-        <nav class="mobile-nav">
+        <nav class="mobile-nav-right">
             <h1 style="font-size: 35px;">frankenmiller's webpages</h1>            
             <a href="https://frankenmiller.github.io/newapp-bootcamp-certificate/">Bootcamp Certificate</a>
             <a href="https://frankenmiller.github.io/codecademy-certificate-swiper/">Codecademy Certificates</a>
             <a href="https://frankenmiller.github.io/jupyter-final-data-project/">Datacamp Project in Jupyter</a>
             <a href="https://frankenmiller.github.io/javascript-neuralnet-car/">Machine Learning Project</a>
+        </nav>
+        <nav class="mobile-nav-left">
             <ul id="social-icons">
                 <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://wa.me/260954692511">
                     <ion-icon name="logo-whatsapp"></ion-icon>                
