--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>your boilerplate project</title>
+        <title>Machine Learning smart rockets</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#212121" />
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="display.css">
-        <link rel="stylesheet" type="text/css" href="burger.css">        
+        <link rel="stylesheet" type="text/css" href="css/display.css">
+        <link rel="stylesheet" type="text/css" href="css/burger.css">        
 
     </head>
     <body>
@@ -37,6 +37,8 @@
             <a href="https://frankenmiller.github.io/javascript-neuralnet-car/">Machine Learning Project</a>
         </nav>
         <nav class="mobile-nav-left">
+            <img id="troy-lodge" src="troy-lodge.png" alt="">
+            <p id="about">Bryan is self-taught jr Data Analyst from Utah. Since 2021 he has lived in Lusaka Zambia developing his skills with fellow forward thinking programmers.</p>
             <ul id="social-icons">
                 <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://wa.me/260954692511">
                     <ion-icon name="logo-whatsapp"></ion-icon>                
