iPad display dimensions added, hamburger feature complete

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <nav class="mobile-nav-left">
             <img id="troy-lodge" src="troy-lodge.png" alt="">
-            <p id="about">Bryan is self-taught jr Data Analyst from Utah. Since 2021 he has lived in Lusaka Zambia developing his skills with fellow forward thinking programmers.</p>
+            <p id="about">Bryan is self-taught jr Data Analyst from Utah. Since 2021 he has lived in Zambian Republic developing his skill with other forward thinking programmers.</p>
             <ul id="social-icons">
                 <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://wa.me/260954692511">
                     <ion-icon name="logo-whatsapp"></ion-icon>                
