Fixed centering issue for social icons

--- a/index.html
+++ b/index.html
@@ -39,26 +39,28 @@
         <nav class="mobile-nav-left">
             <img id="troy-lodge" src="troy-lodge.png" alt="">
             <p id="about">Bryan is self-taught jr Data Analyst from Utah. Since 2021 he has lived in Zambian Republic developing his skill with other forward thinking programmers.</p>
-            <ul id="social-icons">
-                <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://wa.me/260954692511">
-                    <ion-icon name="logo-whatsapp"></ion-icon>                
-                </a></li>
-                <li><a style="background: none; color: #FFF; font-size: 30px;"  onclick="location.href='mailto:dr.frankenmiller@gmail.com';">
-                    <ion-icon name="mail-outline"></ion-icon>
-                </a></li>
-                <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://github.com/frankenmiller">
-                    <ion-icon name="logo-github"></ion-icon>
-                </a></li>
-                <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://linkedin.com/in/frankenmiller">
-                    <ion-icon name="logo-linkedin"></ion-icon>                
-                </a></li>
-                <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                    <ion-icon name="logo-youtube"></ion-icon>                
-                </a></li>
-                <li><a style="background: none; color: #FFF; font-size: 30px;" href="https://public.tableau.com/app/profile/frankenmiller">
-                    <ion-icon name="logo-tableau"></ion-icon>
-                </a></li>
-            </ul>
+            <div class="soc-icon-container">
+                <ul id="social-icons">
+                    <li><a style="background: none; color: #FFF; font-size: 30px;display: inline;" href="https://wa.me/260954692511">
+                        <ion-icon name="logo-whatsapp"></ion-icon>                
+                    </a></li>
+                    <li><a style="background: none; color: #FFF; font-size: 30px;display: inline;"  onclick="location.href='mailto:dr.frankenmiller@gmail.com';">
+                        <ion-icon name="mail-outline"></ion-icon>
+                    </a></li>
+                    <li><a style="background: none; color: #FFF; font-size: 30px;display: inline;" href="https://github.com/frankenmiller">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a></li>
+                    <li><a style="background: none; color: #FFF; font-size: 30px;display: inline;" href="https://linkedin.com/in/frankenmiller">
+                        <ion-icon name="logo-linkedin"></ion-icon>                
+                    </a></li>
+                    <li><a style="background: none; color: #FFF; font-size: 30px;display: inline;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                        <ion-icon name="logo-youtube"></ion-icon>                
+                    </a></li>
+                    <li><a style="background: none; color: #FFF; font-size: 30px;display: inline;" href="https://public.tableau.com/app/profile/frankenmiller">
+                        <ion-icon name="logo-tableau"></ion-icon>
+                    </a></li>
+                </ul>
+            </div>
         </nav>
         <p id="opener"><a href="https://linkedin.com/in/frankenmiller/">linkedin.com/in/frankenmiller</a></p>
         <!-- <p id="counter">Life-P:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lifespan: 200</p> -->
