--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </header>
         <nav class="mobile-nav-right">
             <h1 style="font-size: 35px;">frankenmiller's webpages</h1>            
+            <a href="https://frankenmiller.github.io/tableau-certificate/">Tableau Certification</a>
             <a href="https://frankenmiller.github.io/newapp-bootcamp-certificate/">Bootcamp Certificate</a>
             <a href="https://frankenmiller.github.io/codecademy-certificate-swiper/">Codecademy Certificates</a>
             <a href="https://frankenmiller.github.io/jupyter-final-data-project/">Datacamp Project in Jupyter</a>
